hotfix: trying to fix the annoying zoom on mobile when pressing an input

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,14 @@ body {
 	padding: 0;
 }
 
+/* prevents zoom when clicking on input on mobile phone:
+https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone/47590496 */
+@media screen and (max-width: 599px) {
+	input, select, textarea {
+	  font-size: 16px !important;
+	}
+  }
+
 :root {
 	/* background colors */
 	--primary-color-1: #3fa7d6;
